# device_board_hihope

./: CODEOWNERS  LICENSE  OAT.xml  README_zh.md
dayu210/: BUILD.gn  README_zh.md  device.gni  ohos.build
dayu210/audio_drivers/: Makefile
dayu210/audio_drivers/accessory/es8323/include/: es8323_codec_impl.h
dayu210/audio_drivers/accessory/es8323/src/: es8323_adapter.c  es8323_impl.c  es8323_linux_driver.c
dayu210/audio_drivers/dai/include/: rk3588_dai_linux.h  rk3588_dai_ops.h
dayu210/audio_drivers/dai/src/: rk3588_dai_adapter.c  rk3588_dai_linux_driver.c  rk3588_dai_ops.c
dayu210/audio_drivers/include/: rk3588_audio_common.h
dayu210/audio_drivers/soc/include/: rk3588_dma_ops.h
dayu210/audio_drivers/soc/src/: rk3588_dma_adapter.c  rk3588_dma_ops.c
dayu210/bootanimation/: BUILD.gn
dayu210/camera/: BUILD.gn
dayu210/camera/demo/: BUILD.gn
dayu210/camera/device_manager/: BUILD.gn
dayu210/camera/device_manager/include/: project_hardware.h  rkispv6.h
dayu210/camera/device_manager/src/: rkispv6.cpp
dayu210/camera/device_manager/test/unittest/: BUILD.gn
dayu210/camera/driver_adapter/: BUILD.gn
dayu210/camera/driver_adapter/test/unittest/: BUILD.gn
dayu210/camera/driver_adapter/test/v4l2_test/: BUILD.gn
dayu210/camera/metadata_manager/: BUILD.gn
dayu210/camera/pipeline_core/: BUILD.gn
dayu210/camera/pipeline_core/src/node/: rk_codec_node.cpp  rk_codec_node.h  rk_exif_node.cpp  rk_face_node.cpp  v4l2_source_node_rk.cpp  v4l2_source_node_rk.h
dayu210/camera/pipeline_core/test/unittest/: BUILD.gn
dayu210/camera/vdi_impl/v4l2/: BUILD.gn
dayu210/camera/vdi_impl/v4l2/demo/: BUILD.gn
dayu210/camera/vdi_impl/v4l2/device_manager/: BUILD.gn
dayu210/camera/vdi_impl/v4l2/pipeline_core/: BUILD.gn
dayu210/cfg/: BUILD.gn  fstab.dayu210  init.dayu210.cfg  init.dayu210.usb.cfg
dayu210/distributedhardware/: BUILD.gn  distributed_hardware_components_cfg.json
dayu210/kernel/: BUILD.gn  build_kernel.sh  make-boot.sh  make-ohos.sh
dayu210/kernel/kernel_patch/linux-5.10/dayu210_patch/: hdf.patch  kernel.patch
dayu210/loader/: README_zh.md  parameter.txt  rk3588-uboot溯源说明.md
dayu210/startup/reboot_loader/: BUILD.gn
dayu210/uboot/: BUILD.gn  build_uboot.sh  make.sh
dayu210/updater/: BUILD.gn
dayu210/updater/config/: fstab.updater  init.cfg
dayu300/: BUILD.gn  README.md  device.gni  ohos.build
dayu300/audio_alsa/: common.c  common.h  vendor_capture.c  vendor_render.c
dayu300/audio_alsa/codec_config/: config.h  config_list.h  csctek_config.h  default_config.h  es8336_config.h  fthda_config.h
dayu300/build_kernel/: BUILD.gn  build_dts.sh  build_kernel.sh  check_build.sh  copy_and_patch_kernel_source.sh  gpu_model.gni  kernel.gni  kernel.mk  kernel_module_build.sh  merge_hck.sh  patch_phytium.sh
dayu300/cfg/: BUILD.gn  fstab.dayu300  fstab.nvme  fstab.required  fstab.sdcard  fstab.usb  init.dayu300.cfg  init.dayu300.usb.cfg
dayu300/distributedhardware/: BUILD.gn
dayu300/loader/EFI/BOOT/: bootaa64.efi  grub.cfg
dayu300/tools/generate_image/: generate_image.sh  make_boot.sh
dayu300/updater/: BUILD.gn
dayu300/updater/config/: fstab.updater  fstab.updater.nvme  fstab.updater.sata  init.cfg  init.phytium.usb.cfg
dayu300/updater/menu_preview/: README.md  preview.html
dayu300/updater/resources/pages/: config.json  confirm.json  menu.json  phytium.json  upd.json
dayu300/updater/resources/string/: string.json
dayu300/updater/script/: auto_burn_image.sh  dhcp_script  get_dhcp_ip.sh  grub_exchange.sh  lastword.sh  set_udc.sh
dayu300/wifi/rtw8852/: BUILD.gn
hcs/: BUILD.gn  neptune100.hcs
neptune100/liteos_m/: BUILD.gn  config.gni
rk3568/: BUILD.gn  README_zh.md  config.gni  device.gni  ohos.build
rk3568/audio_alsa/: vendor_capture.c  vendor_render.c
rk3568/audio_drivers/: Makefile
rk3568/audio_drivers/codec/rk809_codec/include/: rk809_codec_impl.h
rk3568/audio_drivers/codec/rk809_codec/src/: rk809_codec_adapter.c  rk809_codec_impl.c
rk3568/audio_drivers/dai/src/: rk3568_dai_adapter.c  rk3568_dai_linux_driver.c  rk3568_dai_ops.c
rk3568/audio_drivers/headset_monitor/src/: analog_headset_adc.c  analog_headset_base.c  analog_headset_core.c  analog_headset_gpio.c
rk3568/audio_drivers/soc/src/: rk3568_dma_adapter.c
rk3568/camera/: BUILD.gn
rk3568/camera/device_manager/: BUILD.gn
rk3568/camera/driver_adapter/test/: BUILD.gn
rk3568/camera/pipeline_core/: BUILD.gn
rk3568/camera/pipeline_core/src/node/: rk_codec_node.cpp  rk_codec_node.h  rk_exif_node.cpp  rk_exif_node.h
rk3568/camera/src/device_manager/: BUILD.gn
rk3568/camera/src/pipeline_core/: BUILD.gn
rk3568/camera/src/pipeline_core/node/: rk_codec_node.cpp
rk3568/camera/vdi_impl/v4l2/: BUILD.gn
rk3568/camera/vdi_impl/v4l2/demo/: BUILD.gn
rk3568/camera/vdi_impl/v4l2/device_manager/: BUILD.gn
rk3568/camera/vdi_impl/v4l2/driver_adapter/: BUILD.gn
rk3568/cfg/: BUILD.gn  fstab.rk3568  init.rk3568.cfg  init.rk3568.usb.cfg
rk3568/distributedhardware/: BUILD.gn  distributed_hardware_components_cfg.json
rk3568/kernel/: BUILD.gn  build_kernel.sh  kernel_source_checker.sh
rk3568/loader/: config.cfg  config_ab.cfg  parameter.txt  parameter_ab.txt
rk3568/startup/reboot_loader/: BUILD.gn  reboot_loader.c
rk3568/system_hap/: Contacts.hap  SettingsData.hap  SystemUI-DropdownPanel.hap  SystemUI-NavigationBar.hap  SystemUI-NotificationManagement.hap  SystemUI-StatusBar.hap  SystemUI-VolumePanel.hap  SystemUI.hap
rk3568/updater/: BUILD.gn  updater_ramdisk_resource_config.ini
rk3568/updater/config/: fstab.updater  init.cfg  init.rk3568.usb.cfg  lastword.sh
rk3568/wifi/bcmdhd_wifi6/: Makefile  hdfwifi_bdh6.mk
rk3568/wifi/bcmdhd_wifi6/hdf/: hdf_bdh_mac80211.c  hdf_driver_bdh_register.c  hdf_mac80211_ap.c  hdf_mac80211_sta.c  hdf_mac80211_sta.h  hdf_mac80211_sta_event.c  hdf_mac80211_sta_event.h  hdf_wl_interface.h  hdfinit_bdh.c  net_bdh_adpater.c  net_bdh_adpater.h
rk3568/wifi/bcmdhd_wifi6/hdfadapt/: hdf_bdh_event.h  hdf_bdh_mac80211.c  hdf_driver_bdh_register.c  hdf_wl_interface.h  hdfinit_bdh.c  net_bdh_adpater.c  net_bdh_adpater.h
(+80 files in other folders)
