# Copyright (C) 2025 Phytium Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//device/board/hihope/dayu300/build_kernel/gpu_model.gni")

print("${device_name}_group in")
group("${device_name}_group") {
  deps = [
    "cfg:init_configs",
    "//device/board/hihope/dayu300/distributedhardware:distributedhardware",
    "//device/board/hihope/dayu300/build_kernel:build_kernel",
    "//device/board/hihope/dayu300/wifi/rtw8852:rtw8852",
    "//device/board/hihope/dayu300/updater:updater_files",
    "//device/soc/phytium/common/gpu_model/$gpu_model:gpu_group",
    "//device/soc/phytium/common/hardware/display:display_buffer_model",
    "//device/soc/phytium/common/hardware/display:display_composer_model",
  ]
}
