# Copyright (C) 2021 HiHope Open Source Organization .
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

soc_company = "rockchip"
soc_name = "rk3568"

import("//device/soc/${soc_company}/${soc_name}/soc.gni")

import("//build/ohos.gni")
if (!defined(defines)) {
  defines = []
}

declare_args() {
  is_support_boot_animation = true
}

product_config_path = "//vendor/${product_company}/${product_name}"
board_camera_path = "//device/board/${product_company}/${device_name}/camera"
is_support_v4l2 = true
if (is_support_v4l2) {
  is_support_mpi = false
  defines += [ "SUPPORT_V4L2" ]
  chipset_build_deps = "$board_camera_path:chipset_build"
  camera_device_manager_deps =
      "$board_camera_path/device_manager:camera_device_manager"
  camera_pipeline_core_deps =
      "$board_camera_path/pipeline_core:camera_pipeline_core"
}
