# Copyright (c) 2024 Phytium Technology Co., Ltd.
# All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
partname="device_${device_name}"
updater_ueventd_cfg = "//base/startup/init/services/etc/ueventd.cfg"

ohos_prebuilt_etc("updater_ueventd.cfg") {
  source = "${updater_ueventd_cfg}"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("updater_init.cfg") {
  source = "config/init.cfg"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("updater_init_usb.cfg") {
  source = "config/init.phytium.usb.cfg"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("signing_cert.crt") {
  source = "config/signing_cert.crt"
  module_install_dir = "etc/certificate"
  install_images = [
    "system",
    "updater",
  ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("fstab.updater") {
  source = "config/fstab.updater"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("fstab.updater.sata") {
  source = "config/fstab.updater.sata"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("fstab.updater.usb") {
  source = "config/fstab.updater.usb"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("fstab.updater.nvme") {
  source = "config/fstab.updater.nvme"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("dhcp_script") {
  source = "script/dhcp_script"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("get_dhcp_ip.sh") {
  source = "script/get_dhcp_ip.sh"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("set_udc.sh") {
  source = "script/set_udc.sh"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_executable("busybox") {
  source = "bin/busybox"
  module_install_dir = "bin"
  install_enable = true
  install_images = [ "updater" ]
  part_name = "${partname}"
}

ohos_prebuilt_etc("grub_exchange_updater.sh") {
  source = "script/grub_exchange.sh"
  output = "grub_exchange_updater.sh"
  install_images = [ "updater" ]
  part_name = "${partname}"
}

group("updater_files") {
  deps = [
    ":fstab.updater",
    ":fstab.updater.sata",
    ":fstab.updater.usb",
    ":fstab.updater.nvme",
    ":signing_cert.crt",
    ":updater_init.cfg",
    ":updater_init_usb.cfg",
    ":updater_ueventd.cfg",
    ":dhcp_script",
    ":get_dhcp_ip.sh",
    ":set_udc.sh",
    ":busybox",
    ":grub_exchange_updater.sh",
  ]
}
