# Copyright (c) 2024 Phytium Technology Co., Ltd.  All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_shared_library("rtw8852b_fw-1.bin") {
  source = "rtw8852b_fw-1.bin"
  install_images = [ "ramdisk" ]
  module_install_dir = "lib/firmware/rtw89"
  part_name = "device_${device_name}"
  install_enable = true
}

group("rtw8852") {
  deps = [
    ":rtw8852b_fw-1.bin",
  ]
}
