# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("rebootloader") {
  sources = [ "reboot_loader.c" ]
  external_deps = [ "init:libinit_module_engine" ]
  if (target_cpu == "arm64") {
    module_install_dir = "lib64/init/autorun"
  } else {
    module_install_dir = "lib/init/autorun"
  }
  part_name = "rockchip_products"
  install_enable = true
  install_images = [ "vendor" ]
}
